# LindaCommunicator

./: CMakeLists.txt  input_output_test.sh  main.cpp  readme.md
include/: LindaCommunicator.h  MatchesFinder.h  PatternComparator.h  ProccessFileUtils.h  ProcessFileUtils.h  SearchProcessFile.h  TupleFileUtils.h  currenttime.h  linda_exception.h  pid.h  signals.h  tuple.h
src/: LindaCommunicator.cpp  MatchesFinder.cpp  PatternComparator.cpp  ProccessFileUtils.cpp  ProccessFileUtils.h  ProcessFileUtils.cpp  ProcessFileUtils.h  SearchProcessFile.cpp  SearchProcessFile.h  TupleFileUtils.cpp  TupleFileUtils.h  pid.cpp  signals.cpp
testLinda/src/pl/edu/pw/testlinda/: Constants.java  LindaInstanceStruct.java  LindaRunnable.java  LindaTypeEnum.java  Main.java  Test.java  Test1.java  Test2.java  Test3.java  Test4.java  Test5.java  Test6.java
testLinda/src/pl/edu/pw/testlinda/tests/: Test1.java
